[package]
name = "b-cleaner"
version = "0.1.0"
authors = ["Mathis EON <eon@abes.fr>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="b-cleaner"
path="src/main.rs"

[lib]
name="b_cleaner"
path="src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
unicode-normalization = "0.1.13"
unidecode = "0.3.0"
rust-stemmers = {version="1.2.0", optional=true}
pyo3 = {version="0.11.1", features = ["extension-module"], optional=true}

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[features]
python = [
    "pyo3"
]

stem = [
    "rust-stemmers"
]